Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -73,8 +73,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
             }
         }
         ul {
-            display: table;
-            float: none;
             margin: 1em auto;
             text-align: center;
             padding: 4px 0 0 0;
